# md2pdf

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  styles.css
md2pdf_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/md2pdf/: __init__.py
tasks/: star_wrapper.py
